Complete calculator buttons. (no display)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="container">
       <div class="number-pad">
         <div class="button-group">
+          <button class="stretch">A/C</button>
+          <button>/</button>
+        </div>
+        <div class="button-group">
           <button>7</button>
           <button>8</button>
           <button>9</buttobn>
@@ -29,11 +33,10 @@
           <button>+</button>
         </div>
         <div class="bottom-row">
-          <button>0</button>
+          <button class="stretch">0</button>
           <button>=</button>
         </div>
       </div>
-
     </div>
   </body>
 </html>
