Center calculator and basic display

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <div class="number-pad">
+        <div class="display">0</div>
         <div class="button-group">
           <button class="stretch">A/C</button>
           <button>/</button>
@@ -17,7 +18,7 @@
         <div class="button-group">
           <button>7</button>
           <button>8</button>
-          <button>9</buttobn>
+          <button>9</button>
           <button>x</button>
         </div>
         <div class="button-group">
@@ -32,7 +33,7 @@
           <button>3</button>
           <button>+</button>
         </div>
-        <div class="bottom-row">
+        <div class="button-group">
           <button class="stretch">0</button>
           <button>=</button>
         </div>
