--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
   <body>
     <div class="container">
       <div class="number-pad">
-        <div class="display">1</div>
+        <div class="display">0</div>
         <div class="button-group">
-          <button class="stretch">A/C</button>
-          <button>/</button>
+          <button class="stretch clear">A/C</button>
+          <button class="operand">/</button>
         </div>
         <div class="button-group">
           <button>7</button>
           <button>8</button>
           <button>9</button>
-          <button>x</button>
+          <button class="operand">x</button>
         </div>
         <div class="button-group">
           <button>4</button>
           <button>5</button>
           <button>6</button>
-          <button>-</button>
+          <button class="operand">-</button>
         </div>
         <div class="button-group">
           <button>1</button>
           <button>2</button>
           <button>3</button>
-          <button>+</button>
+          <button class="operand">+</button>
         </div>
         <div class="button-group">
           <button class="stretch">0</button>
-          <button>=</button>
+          <button class="equals">=</button>
         </div>
       </div>
     </div>
