--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
           <button class="operand">/</button>
         </div>
         <div class="button-group">
-          <button>7</button>
-          <button>8</button>
-          <button>9</button>
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
           <button class="operand">x</button>
         </div>
         <div class="button-group">
-          <button>4</button>
-          <button>5</button>
-          <button>6</button>
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
           <button class="operand">-</button>
         </div>
         <div class="button-group">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
           <button class="operand">+</button>
         </div>
         <div class="button-group">
-          <button class="stretch">0</button>
+          <button class="number stretch">0</button>
           <button class="equals">=</button>
         </div>
       </div>
